# bayesh

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bayesh.bash  dev-requirements.txt  go.mod  go.sum  install.bash  install.sh  main.go  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bayesh/: _command_processing.py  _db.py  _settings.py  _utils.py  cli.py
docker/bash-tests/: Dockerfile  Makefile
shell/: bayesh-tmux-server.bash  bayesh-tmux.zsh  bayesh.bash  bayesh.sh  bayesh.zsh  fzf-tab-completion-plugin.bash  fzf_tmux_server.zsh  setup.bash
src/: algo.go  algo_test.go  command_processing.go  command_processing_test.go  core.go  core_test.go  db.go  db_test.go  settings.go  settings_test.go  setup.go  setup_test.go
tests/: conftest.py  test.bats  test_cli.py  test_command_processing.py  test_db.py  test_install.bats  test_no_bayesh.bats  test_settings.py  test_utils.py  test_with_bayesh.bats
tests/data/: processed_bash_commands  processed_bash_commands.csv  sanitized_bash_commands.csv  unwrap_me_gently.txt
