[project]
name = "bayesh"
version = "0.0.0"
dependencies = [
    "click"
]

[tool.setuptools.packages.find]
include = ["bayesh"]

[project.scripts]
bayesh = "bayesh.cli:cli"

[project.optional-dependencies]
dev = [
    "faker",
    "parse",
    "pre-commit",
    "pydantic",
    "pytest",
    "pytest-mock"
]
